# ros_sgx

./: README.md
ros_sgx/: CMakeLists.txt  package.xml
ros_sgx/msg/: sgxmsg.msg
sample/: CMakeLists.txt  package.xml
sample/pub/: enclave_pub.config.xml  enclave_pub.cpp  enclave_pub.edl  publisher.cpp
sample/sub/: enclave_sub.cpp  enclave_sub.edl  subscriber.cpp
sgx_cmake/: CMakeLists.txt  package.xml
sgx_cmake/cmake/: ros_sgx-extras.cmake.develspace.in  ros_sgx-extras.cmake.installspace.in
trusted_lib/: trusted_lib.cpp  trusted_lib.edl  trusted_lib.h
untrusted_lib/: untrusted_lib.cpp  untrusted_lib.h
